namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-occupeye-shiny-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-occupeye-shiny-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "occupeye-shiny-app"
    cloud-platform.justice.gov.uk/application: "occupeye-shiny-app"
    cloud-platform.justice.gov.uk/owner: "commercial, contract management business partnering team: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/occupeye-shiny-app"
    cloud-platform.justice.gov.uk/team-name: "occupeye-shiny-app-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
